--- a/src/saar_website/templates/saar_website/about.html
+++ b/src/saar_website/templates/saar_website/about.html
@@ -18,10 +18,10 @@
     <!-- Header End -->
 
     <!-- About Start -->
-    <div class="container-fluid about bg-white py-5">
+    <div class="container-fluid about py-5">
         <div class="container py-2">
             <div class="row justify-content-center">
-                <div class="col-lg-6">
+                <div class="col-md-6 col-lg-6">
                     {% comment %} <div class="h-100" style="border: 50px solid; border-color: transparent #13357B transparent #13357B;">#B99470 {% endcomment %}
                     {% comment %} <div class="h-100" style="border: 50px solid; border-color: transparent #D6B033 transparent #D6B033;"> {% endcomment %}
                         {% comment %} <img src="{% static 'img/saar_img_1.png' %}" class="img-fluid w-100 h-100" alt=""> {% endcomment %}
@@ -31,22 +31,22 @@
                     {% comment %} </div> {% endcomment %}
                 </div>
                 {% comment %} <div class="col-lg-6" style="background: linear-gradient(rgba(255, 255, 255, .8), rgba(255, 255, 255, .8)), url(img/saar_img_1.png);"> {% endcomment %}
-                <div class="col-lg-6">
+                <div class="col-md-6 col-lg-6 bg-white p-2">
                     <h5 class="section-about-title pe-3">Qui somme nous ?</h5>
-                    <h1 class="mb-4">Bienvenue à <span class="text-primary">SAAR Assurances</span></h1>
-                    <p class="mb-4" style="text-align: justify; font-size: 1.25em; color: black;">SAAR ASSURANCES CÔTE D'IVOIRE est une société anonyme au capital de 3.000.000.000 FCFA composée de deux sociétés d'assurance (assurances vie et assurances IARD), habilitées à présenter les opérations d'assurance en République de Côte d'Ivoire. Elle est membre du groupe SAAR qui est présent depuis plus de 30 ans dans de nombreux pays africains : Bénin, Côte d’Ivoire, Guinée équatoriale, Liberia, République de Guinée, Sao Tomé-et-Principe, Sénégal et Tchad.</p>
-                    <p class="mb-4" style="text-align: justify; font-size: 1.25em; color: black;">Le directeur général actuel est <strong><a href="https://www.linkedin.com/in/lo%C3%AFc-armel-kengne-wafo-llb-mba-accpa-85236643/" target="_blank" rel="noopener noreferrer">Monsieur KENGNE WAFO LOÏC ARMEL</a></strong>, poste occupé depuis le 25 Novembre 2021.</p>
+                    {% comment %} <h1 class="mb-4">Bienvenue à <span class="text-primary">SAAR Assurances</span></h1> {% endcomment %}
+                    <p class="mb-4" style="text-align: justify; color: black;">SAAR ASSURANCES CÔTE D'IVOIRE est une société anonyme au capital de 3.000.000.000 FCFA composée de deux sociétés d'assurance (assurances vie et assurances IARD), habilitées à présenter les opérations d'assurance en République de Côte d'Ivoire. Elle est membre du groupe SAAR qui est présent depuis plus de 30 ans dans de nombreux pays africains : Bénin, Côte d’Ivoire, Guinée équatoriale, Liberia, République de Guinée, Sao Tomé-et-Principe, Sénégal et Tchad.</p>
+                    <p class="mb-4" style="text-align: justify; color: black;">Le directeur général actuel est <strong><a href="https://www.linkedin.com/in/lo%C3%AFc-armel-kengne-wafo-llb-mba-accpa-85236643/" target="_blank" rel="noopener noreferrer">Monsieur KENGNE WAFO LOÏC ARMEL</a></strong>, poste occupé depuis le 25 Novembre 2021.</p>
 
                     {% comment %} <p class="mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium quos voluptatem suscipit neque enim, doloribus ipsum rem eos distinctio, dignissimos nisi saepe nulla? Libero numquam perferendis provident placeat molestiae quia?</p> {% endcomment %}
                     <div class="row gy-2 gx-4 mb-4">
                         <div class="col-sm-6">
-                            <p class="mb-0" style="font-size: 1.25em; color: black;"><i class="fa fa-arrow-right text-primary me-2"></i>50-100 employés</p>
+                            <p class="mb-0" style="color: black;"><i class="fa fa-arrow-right text-primary me-2"></i>100-150 employés</p>
                         </div>
                         {% comment %} <div class="col-sm-6">
                             <p class="mb-0"><i class="fa fa-arrow-right text-primary me-2"></i>Fondée en 1990</p>
                         </div> {% endcomment %}
                         <div class="col-sm-6">
-                            <p class="mb-0" style="font-size: 1.25em; color: black;"><i class="fa fa-arrow-right text-primary me-2"></i><strong>Spécialisations :</strong> Assurances vie, Assurances non vie, Assurance Takaful et Immobilier </p>
+                            <p class="mb-0" style="color: black;"><i class="fa fa-arrow-right text-primary me-2"></i><strong>Spécialisations :</strong> Assurances vie, Assurances non vie, Assurance Takaful et Immobilier </p>
                         </div>
                         {% comment %} <div class="col-sm-6">
                             <p class="mb-0"><i class="fa fa-arrow-right text-primary me-2"></i>Latest Model Vehicles</p>
