--- a/src/saar_website/templates/saar_website/agences.html
+++ b/src/saar_website/templates/saar_website/agences.html
@@ -40,7 +40,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="blog-content border border-top-0 rounded-bottom p-4">
+                        <div class="blog-content border border-top-0 rounded-bottom bg-light p-4">
                             <a href="#"  class="h4">{{ agence.titre }}</a>
                             <p class="my-3">{{ agence.situation }}</p>
                             <p class="my-3">{{ agence.contact }}</p>
@@ -76,7 +76,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="blog-content border border-top-0 rounded-bottom p-4">
+                            <div class="blog-content border border-top-0 rounded-bottom bg-light p-4">
                                 <a href="#"  class="h4">{{ agence.titre }}</a>
                                 <p class="my-3">{{ agence.situation }}</p>
                                 <p class="my-3">{{ agence.contact }}</p>
