--- a/src/saar_website/templates/saar_website/valeurs.html
+++ b/src/saar_website/templates/saar_website/valeurs.html
@@ -19,7 +19,7 @@
 
    
     <!-- Contact Start -->
-    <div class="container-fluid contact bg-light py-5">
+    <div class="container-fluid contact py-5">
         <div class="container py-2">
             {% comment %} <div class="mx-auto text-center mb-5" style="max-width: 900px;">
                 <h5 class="section-title px-3">Contactez Nous</h5>
@@ -43,27 +43,27 @@
 
                 <div class="col-md-12 col-lg-12">
                     <div class="alert alert-success" role="alert">
-                        <h2>1 | PROFESSIONNALISME</h2>
+                        <h4>1 | PROFESSIONNALISME</h4>
                         <p>Nous sommes focalisés sur le client. Notre équipe se consacre entièrement à l'amélioration de l'expérience de nos clients avec nos produits et services.</p>
                     </div>
 
                     <div class="alert alert-primary" role="alert">
-                        <h2>2 | EXCELLENT SERVICE QUALITE</h2>
+                        <h4>2 | EXCELLENT SERVICE QUALITE</h4>
                         <p>Nous travaillons en permanence à l'amélioration de notre qualité de service afin qu'elle reflète notre vision en tant qu'assureur africain de renommée mondiale.</p>
                     </div>
 
                     <div class="alert alert-info" role="alert">
-                        <h2>3 | RESPECTER NOS ENGAGEMENTS</h2>
+                        <h4>3 | RESPECTER NOS ENGAGEMENTS</h4>
                         <p>Nous sommes conscients que le seul moyen de conserver la confiance de nos clients est le strict respect de nos engagements.</p>
                     </div>
 
                     <div class="alert alert-warning" role="alert">
-                        <h2>4 | L'ESPRIT D'EQUIPE</h2>
+                        <h4>4 | L'ESPRIT D'EQUIPE</h4>
                         <p>L'assurance SAAR est constituée de femmes et d'hommes d'origines et d'âges divers. Tous sont unis autour de notre culture d'entreprise et du partage de notre vision. </p>
                     </div>
 
                     <div class="alert alert-danger" role="alert">
-                        <h2>5 | INNOVATION</h2>
+                        <h4>5 | INNOVATION</h4>
                         <p>Le marché de l'assurance reste encore trop classique, les défis sont nombreux. C'est pourquoi SAAR ASSURANCE s'engage à concevoir des produits d'assurance sur mesure afin de satisfaire toutes les couches de la société.</p>
                     </div>
                 </div>
