--- a/src/saar_website/templates/saar_website/contact.html
+++ b/src/saar_website/templates/saar_website/contact.html
@@ -18,7 +18,7 @@
     <!-- Header End -->
 
     <!-- Contact Start -->
-    <div class="container-fluid contact bg-light py-5">
+    <div class="container-fluid contact py-5">
         <div class="container py-5">
             <div class="mx-auto text-center mb-5" style="max-width: 900px;">
                 <h5 class="section-title px-3">Contactez Nous</h5>
@@ -26,7 +26,7 @@
             </div>
             <div class="row g-5 align-items-center">
                 <div class="col-lg-4">
-                    <div class="bg-white rounded p-4">
+                    <div class="bg-white border rounded p-4">
                         <div class="text-center mb-4">
                             <i class="fa fa-map-marker-alt fa-3x text-primary"></i>
                             <h4 class="text-primary"><Address></Address></h4>
@@ -75,25 +75,25 @@
                         <div class="row g-3">
                             <div class="col-md-6">
                                 <div class="form-floating">
-                                    <input type="text" class="form-control border-0" id="name" name="name" placeholder="Your Name" required>
+                                    <input type="text" class="form-control border-1" id="name" name="name" placeholder="Your Name" required>
                                     <label for="name">Votre Nom</label>
                                 </div>
                             </div>
                             <div class="col-md-6">
                                 <div class="form-floating">
-                                    <input type="email" class="form-control border-0" id="email" name="from_email" placeholder="Your Email" required>
+                                    <input type="email" class="form-control border-1" id="email" name="from_email" placeholder="Your Email" required>
                                     <label for="email">Votre Email</label>
                                 </div>
                             </div>
                             <div class="col-12">
                                 <div class="form-floating">
-                                    <input type="text" class="form-control border-0" id="subject" name="subject" placeholder="Subject" required>
+                                    <input type="text" class="form-control border-1" id="subject" name="subject" placeholder="Subject" required>
                                     <label for="subject">Sujet</label>
                                 </div>
                             </div>
                             <div class="col-12">
                                 <div class="form-floating">
-                                    <textarea class="form-control border-0" placeholder="Leave a message here" id="message" name="message" style="height: 160px" required></textarea>
+                                    <textarea class="form-control border-1" placeholder="Leave a message here" id="message" name="message" style="height: 160px" required></textarea>
                                     <label for="message">Message</label>
                                 </div>
                             </div>
